--- a/listproduk.html
+++ b/listproduk.html
@@ -147,12 +147,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1 class="m-0 text-dark">Dashboard</h1>
+            <h1 class="m-0 text-dark">Daftar Produk</h1>
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Dashboard</li>
+              <li class="breadcrumb-item active">Daftar Produk</li>
             </ol>
           </div><!-- /.col -->
         </div><!-- /.row -->
@@ -165,67 +165,95 @@
       <div class="container-fluid">
         <!-- Small boxes (Stat box) -->
         <div class="row">
-          <div class="col-lg-3 col-6">
-            <!-- small box -->
-            <div class="small-box bg-info">
-              <div class="inner">
-                <h3>150</h3>
+          <div class="col-md-3 mb-3">
+<div class="card h-100">
+<img class="img-fluid" alt="100%x280"
+src=https://cdn.discordapp.com/attachments/906163180328325130/914060163638505542/AlmondCrispyCheese_1.jpg>
+<div class="card-body">
+<h5 class="card-title">Almond Crispy Cheese</h5>
+<div style='z-index: 2; position: relative;'>
+<a class="card-text bi bi-geo-alt text-decoration-none"
+href="/filter/daerah/Surabaya"
+style='color: inherit;'>
 
-                <p>New Orders</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-bag"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-lg-3 col-6">
-            <!-- small box -->
-            <div class="small-box bg-success">
-              <div class="inner">
-                <h3>53<sup style="font-size: 20px">%</sup></h3>
+</a>
+</div>
+<a href="/varianoleh/21"
+class="stretched-link"></a>
+</div>
+<div class="card-footer bg-transparent">
+<p class="card-text bi bi-heart-fill">
+Rp20.000</p>
+</div>
+</div>
+</div>
+          <div class="col-md-3 mb-3">
+<div class="card h-100">
+<img class="img-fluid" alt="100%x280"
+src=https://cdn.discordapp.com/attachments/906163180328325130/916964212767621130/CokelatTempe.jpg>
+<div class="card-body">
+<h5 class="card-title">Cokelat Tempe</h5>
+<div style='z-index: 2; position: relative;'>
+<a class="card-text bi bi-geo-alt text-decoration-none"
+href="/filter/daerah/Malang"
+style='color: inherit;'>
 
-                <p>Bounce Rate</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-stats-bars"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-lg-3 col-6">
-            <!-- small box -->
-            <div class="small-box bg-warning">
-              <div class="inner">
-                <h3>44</h3>
+</a>
+</div>
+<a href="/varianoleh/22"
+class="stretched-link"></a>
+</div>
+<div class="card-footer bg-transparent">
+<p class="card-text bi bi-heart-fill">
+  Rp20.000</p>
+</div>
+</div>
+</div>
+<div class="col-md-3 mb-3">
+  <div class="card h-100">
+  <img class="img-fluid" alt="100%x280"
+  src=https://cdn.discordapp.com/attachments/906163180328325130/916964212767621130/CokelatTempe.jpg>
+  <div class="card-body">
+  <h5 class="card-title">Cokelat Tempe</h5>
+  <div style='z-index: 2; position: relative;'>
+  <a class="card-text bi bi-geo-alt text-decoration-none"
+  href="/filter/daerah/Malang"
+  style='color: inherit;'>
+  
+  </a>
+  </div>
+  <a href="/varianoleh/22"
+  class="stretched-link"></a>
+  </div>
+  <div class="card-footer bg-transparent">
+  <p class="card-text bi bi-heart-fill">
+    Rp20.000</p>
+  </div>
+  </div>
+  </div>
+          <div class="col-md-3 mb-3">
+<div class="card h-100">
+<img class="img-fluid" alt="100%x280"
+src=https://cdn.discordapp.com/attachments/906163180328325130/916962624820879431/PiaMalang_2.jpg>
+<div class="card-body">
+<h5 class="card-title">Bakpia Khas Malang</h5>
+<div style='z-index: 2; position: relative;'>
+<a class="card-text bi bi-geo-alt text-decoration-none"
+href="/filter/daerah/Malang"
+style='color: inherit;'>
 
-                <p>User Registrations</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-person-add"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-lg-3 col-6">
-            <!-- small box -->
-            <div class="small-box bg-danger">
-              <div class="inner">
-                <h3>65</h3>
-
-                <p>Unique Visitors</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-pie-graph"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-        </div>
+</a>
+</div>
+<a href="/varianoleh/24"
+class="stretched-link"></a>
+</div>
+<div class="card-footer bg-transparent">
+<p class="card-text bi bi-heart-fill">
+Rp20.000</p>
+</div>
+</div>
+</div>
+  </div>
         <!-- /.row -->
         <!-- Main row -->
         
