--- a/listproduk.html
+++ b/listproduk.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 3 | Dashboard</title>
+  <title>Oasis</title>
+  <link rel="icon" href="dist/img/Trinity.png">
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
@@ -170,7 +171,9 @@
 <img class="img-fluid" alt="100%x280"
 src=https://cdn.discordapp.com/attachments/906163180328325130/914060163638505542/AlmondCrispyCheese_1.jpg>
 <div class="card-body">
-<h5 class="card-title">Almond Crispy Cheese</h5>
+<h5 class="card-title">Almond Crispy Cheese</h5> 
+<br>
+<h6 class="card-title">50 pcs</h6>
 <div style='z-index: 2; position: relative;'>
 <a class="card-text bi bi-geo-alt text-decoration-none"
 href="/filter/daerah/Surabaya"
@@ -193,6 +196,8 @@ Rp20.000</p>
 src=https://cdn.discordapp.com/attachments/906163180328325130/916964212767621130/CokelatTempe.jpg>
 <div class="card-body">
 <h5 class="card-title">Cokelat Tempe</h5>
+<br>
+<h6 class="card-title">50 pcs</h6>
 <div style='z-index: 2; position: relative;'>
 <a class="card-text bi bi-geo-alt text-decoration-none"
 href="/filter/daerah/Malang"
@@ -215,6 +220,8 @@ class="stretched-link"></a>
   src=https://cdn.discordapp.com/attachments/906163180328325130/916964212767621130/CokelatTempe.jpg>
   <div class="card-body">
   <h5 class="card-title">Cokelat Tempe</h5>
+  <br>
+  <h6 class="card-title">50 pcs</h6>
   <div style='z-index: 2; position: relative;'>
   <a class="card-text bi bi-geo-alt text-decoration-none"
   href="/filter/daerah/Malang"
@@ -237,6 +244,8 @@ class="stretched-link"></a>
 src=https://cdn.discordapp.com/attachments/906163180328325130/916962624820879431/PiaMalang_2.jpg>
 <div class="card-body">
 <h5 class="card-title">Bakpia Khas Malang</h5>
+<br>
+<h6 class="card-title">50 pcs</h6>
 <div style='z-index: 2; position: relative;'>
 <a class="card-text bi bi-geo-alt text-decoration-none"
 href="/filter/daerah/Malang"
