--- a/addproduk.html
+++ b/addproduk.html
@@ -191,7 +191,11 @@
                 </div>
                 <div class="form-group">
                   <label for="inputName">Harga Produk</label>
-                  <input type="text" id="inputName" class="form-control">
+                  <input type="number" id="inputName" placeholder="Rp." class="form-control">
+                </div>
+                <div class="form-group">
+                  <label for="inputName">Stok</label>
+                  <input type="number" id="inputName" class="form-control">
                 </div>
               
                 <div class="form-group">
