--- a/listproduk.html
+++ b/listproduk.html
@@ -181,35 +181,35 @@
                 <tbody>
                   <tr>
                     <td>
-                      <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">
-                      Some Product
+                      <img src="https://cdn.discordapp.com/attachments/906163180328325130/914060163638505542/AlmondCrispyCheese_1.jpg" alt="Product 1" class="img-circle img-size-32 mr-2">
+                      Almond Crispy Cheese
                     </td>
                     <td>Rp.20.000</td>
-                    <td>12</td>
+                    <td>50</td>
                   </tr>
                   <tr>
                     <td>
-                      <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">
-                      Some Product
+                      <img src="https://cdn.discordapp.com/attachments/906163180328325130/916964212767621130/CokelatTempe.jpg" alt="Product 1" class="img-circle img-size-32 mr-2">
+                      Cokelat Tempe
                     </td>
                     <td>Rp.20.000</td>
-                    <td>12</td>
+                    <td>50</td>
                   </tr>
                   <tr>
                     <td>
-                      <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">
-                      Some Product
+                      <img src="https://cdn.discordapp.com/attachments/906163180328325130/916964212767621130/CokelatTempe.jpg" alt="Product 1" class="img-circle img-size-32 mr-2">
+                      Cokelat Tempe
                     </td>
                     <td>Rp.20.000</td>
-                    <td>12</td>
+                    <td>50</td>
                   </tr>
                   <tr>
                     <td>
-                      <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">
-                      Some Product
+                      <img src="https://cdn.discordapp.com/attachments/906163180328325130/916962624820879431/PiaMalang_2.jpg" alt="Product 1" class="img-circle img-size-32 mr-2">
+                      Bakpia Khas Malang
                     </td>
                     <td>Rp.20.000</td>
-                    <td>12</td>
+                    <td>50</td>
                   </tr>
                 </tbody>
               </table>
