--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
           </div>
           <div class="info">
-            <a href="#" class="d-block">Nama Mitra</a>
+            <a href="profil.html" class="d-block">Nama Mitra</a>
           </div>
         </div>
 
