--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
   <link rel="stylesheet" href="plugins/summernote/summernote-bs4.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <!-- Box Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <!-- Line Chart -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"
+    integrity="sha512-QSkVNOCYLtj73J4hbmVoOV6KVZuMluZlioC+trLpewV8qMjsWqlIQvkn1KGX2StWvPMdWGBqim1xlC8krl1EKQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -46,7 +53,7 @@
       </ul>
 
       <!-- SEARCH FORM -->
-      
+
 
       <!-- Right navbar links -->
       <ul class="navbar-nav ml-auto" <!-- Messages Dropdown Menu -->
@@ -156,6 +163,293 @@
       <!-- Main content -->
       <section class="content">
         <div class="container-fluid">
+          <div class="row mb-2">
+            <div class="col-sm-6">
+              <h1 class="db-title m-0 text-dark" style="font-size: 25px; font-weight:600;">Online Visitor</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="card" style="width: 100vw;">
+              <div class="card-header border-0">
+                <div class="d-flex justify-content-between">
+                  <p class="d-flex flex-column">
+                    <span class="text-bold text-lg">820</span>
+                    <span>Visitors Over Time</span>
+                  </p>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="position-relative mb-4">
+                  <canvas id="myChart" width="1000" height="200"></canvas>
+                  <script>
+                    const labels = [
+                      'Jan',
+                      'Feb',
+                      'Mar',
+                      'Apr',
+                      'May',
+                      'Jun',
+                      'Jul',
+                      'Aug',
+                      'Sep',
+                      'Oct',
+                      'Nov',
+                      'Des',
+                    ];
+
+                    const data = {
+                      labels: labels,
+                      datasets: [{
+                        label: 'Visitor 2022',
+                        backgroundColor: 'rgb(255, 99, 132)',
+                        borderColor: 'rgb(255, 99, 132)',
+                        data: [0, 10, 5, 2, 20, 30, 45, 50, 20, 55, 40, 25,],
+                      }]
+                    };
+
+                    const config = {
+                      type: 'line',
+                      data: data,
+                      options: {}
+                    };
+                    const myChart = new Chart(
+                      document.getElementById('myChart'),
+                      config
+                    );
+                  </script>
+                </div>
+                
+              </div>
+            </div>
+          </div>
+          <div class="row mb-2">
+            <div class="col-sm-6">
+              <h1 class="db-title m-0 text-dark " style="font-size: 25px;font-weight:600;">Feedback</h1>
+            </div>
+          </div>
+          <div class="row mb-2">
+            <div class="col-md-3 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Jonathan</h5>
+                  <div class="card-body bg-transparent">
+                    <br>
+                    <div class="row rating" style="font-weight: 1000; font-size:large;">
+                      <div class="col-sm-6">
+                        Overall
+                      </div>
+                      <div class="col-sm-6">
+                        4/5
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Kerapihan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Kebersihan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Pelayanan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Jonathan</h5>
+                  <br>
+                  <div class="card-body bg-transparent">
+                    <div class="row rating" style="font-weight: 1000; font-size:large;">
+                      <div class="col-sm-6">
+                        Overall
+                      </div>
+                      <div class="col-sm-6">
+                        4/5
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Kerapihan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Kebersihan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Pelayanan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Jonathan</h5>
+                  <br>
+                  <div class="card-body bg-transparent">
+                    <div class="row rating" style="font-weight: 1000; font-size:large;">
+                      <div class="col-sm-6">
+                        Overall
+                      </div>
+                      <div class="col-sm-6">
+                        4/5
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Kerapihan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Kebersihan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Pelayanan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Jonathan</h5>
+                  <br>
+                  <div class="card-body bg-transparent">
+                    <div class="row rating" style="font-weight: 1000; font-size:large;">
+                      <div class="col-sm-6">
+                        Overall
+                      </div>
+                      <div class="col-sm-6">
+                        4/5
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Kerapihan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Kebersihan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        Pelayanan
+                      </div>
+                      <div class="col-sm-6">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mb-2">
+            <div class="col-sm-6">
+              <h1 class="db-title m-0 text-dark " style="font-size: 25px;font-weight:600;">Produk Oleh-Oleh Mitra Jaya Favorit Customer</h1>
+            </div>
+          </div>
           <!-- Small boxes (Stat box) -->
           <div class="row">
             <div class="col-md-3 mb-3">
@@ -172,11 +466,14 @@
 
                     </a>
                   </div>
+                  <div class="card-footer bg-transparent">
+                    Rp. 20.000
+                  </div>
                   <a href="/varianoleh/21" class="stretched-link"></a>
                 </div>
                 <div class="card-footer bg-transparent">
                   <p class="card-text bi bi-heart-fill">
-                    Rp20.000</p>
+                    10 Orang Menyukai ini</p>
                 </div>
               </div>
             </div>
@@ -194,11 +491,14 @@
 
                     </a>
                   </div>
+                  <div class="card-footer bg-transparent">
+                    Rp. 20.000
+                  </div>
                   <a href="/varianoleh/22" class="stretched-link"></a>
                 </div>
                 <div class="card-footer bg-transparent">
                   <p class="card-text bi bi-heart-fill">
-                    Rp20.000</p>
+                    10 Orang Menyukai ini</p>
                 </div>
               </div>
             </div>
@@ -216,11 +516,15 @@
 
                     </a>
                   </div>
+                  <div class="card-footer bg-transparent">
+                    Rp. 20.000
+                  </div>
+
                   <a href="/varianoleh/22" class="stretched-link"></a>
                 </div>
                 <div class="card-footer bg-transparent">
                   <p class="card-text bi bi-heart-fill">
-                    Rp20.000</p>
+                    10 Orang Menyukai ini</p>
                 </div>
               </div>
             </div>
@@ -238,11 +542,14 @@
 
                     </a>
                   </div>
+                  <div class="card-footer bg-transparent">
+                    Rp. 20.000
+                  </div>
                   <a href="/varianoleh/24" class="stretched-link"></a>
                 </div>
                 <div class="card-footer bg-transparent">
                   <p class="card-text bi bi-heart-fill">
-                    Rp20.000</p>
+                    10 Orang Menyukai ini</p>
                 </div>
               </div>
             </div>
